--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box justify-content-center">
-            <img src="../Personal/assets/img/ico/js.png">
+            <img src="assets/img/ico/js.png">
             <!--i class="ri-paint-brush-line" style="color: #e361ff;"></i>
             <h3>Magni Dolores</h3-->
           </div>
