modifica origen imagenes

--- a/index.html
+++ b/index.html
@@ -231,21 +231,21 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box justify-content-center">
-            <img src="../Personal/assets/img/ico/java_tr.png">
+            <img src="assets/img/ico/java_tr.png">
             <!--i class="ri-store-line" style="color: #ffbb2c;"></i>
             <h3>Lorem Ipsum</h3-->
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box justify-content-center">
-            <img src="../Personal/assets/img/ico/spBoot_tr.png">
+            <img src="assets/img/ico/spBoot_tr.png">
             <!--i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
             <h3>Dolor Sitema</h3-->
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box justify-content-center">
-            <img src="../Personal/assets/img/ico/mysql.png">
+            <img src="assets/img/ico/mysql.png">
             <!--i class="ri-calendar-todo-line" style="color: #e80368;"></i>
             <h3>Sed perspiciatis</h3-->
           </div>
@@ -259,42 +259,42 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box justify-content-center">
-            <img src="../Personal/assets/img/ico/html5.png">
+            <img src="assets/img/ico/html5.png">
             <!--i class="ri-database-2-line" style="color: #47aeff;"></i>
             <h3>Nemo Enim</h3-->
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box justify-content-center">
-            <img src="../Personal/assets/img/ico/css.png">
+            <img src="assets/img/ico/css.png">
             <!-- <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
             <h3>Eiusmod Tempor</h3> -->
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box justify-content-center">
-            <img src="../Personal/assets/img/ico/oie_dqspK7A0MX6G.png">
+            <img src="assets/img/ico/oie_dqspK7A0MX6G.png">
             <!-- <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
             <h3>Midela Teren</h3> -->
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box justify-content-center">
-            <img src="../Personal/assets/img/ico/jquery.png">
+            <img src="assets/img/ico/jquery.png">
             <!-- <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
             <h3>Pira Neve</h3> -->
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box justify-content-center">
-            <img src="../Personal/assets/img/ico/security.png">
+            <img src="assets/img/ico/security.png">
             <!-- <i class="ri-anchor-line" style="color: #b2904f;"></i>
             <h3>Dirada Pack</h3> -->
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box justify-content-center">
-            <img src="../Personal/assets/img/ico/jpa.png">
+            <img src="assets/img/ico/jpa.png">
             <!-- <i class="ri-disc-line" style="color: #b20969;"></i>
             <h3>Moton Ideal</h3> -->
           </div>
