--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box justify-content-center">
-            <img src="assets/img/ico/html5.png">
+            <img src="assets/img/ico/html.png">
             <!--i class="ri-database-2-line" style="color: #47aeff;"></i>
             <h3>Nemo Enim</h3-->
           </div>
@@ -299,7 +299,7 @@
             <h3>Moton Ideal</h3> -->
           </div>
         </div>
-        <div class="col-lg-3 col-md-4 mt-4">
+        <!-- <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
             <i class="ri-base-station-line" style="color: #ff5828;"></i>
             <h3>Verdo Park</h3>
@@ -310,7 +310,7 @@
             <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
             <h3>Flavor Nivelanda</h3>
           </div>
-        </div>
+        </div> -->
       </div>
 
     </div><!-- End Interests -->
