--- a/index.html
+++ b/index.html
@@ -299,18 +299,20 @@
             <h3>Moton Ideal</h3> -->
           </div>
         </div>
-        <!-- <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-base-station-line" style="color: #ff5828;"></i>
-            <h3>Verdo Park</h3>
+        <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box justify-content-center">
+            <img src="assets/img/ico/thymeleaf.png">
+            <!-- <i class="ri-base-station-line" style="color: #ff5828;"></i>
+            <h3>Verdo Park</h3> -->
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
-          <div class="icon-box">
-            <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
-            <h3>Flavor Nivelanda</h3>
+          <div class="icon-box justify-content-center">
+            <img src="assets/img/ico/jsp.png">
+            <!-- <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
+            <h3>Flavor Nivelanda</h3> -->
           </div>
-        </div> -->
+        </div>
       </div>
 
     </div><!-- End Interests -->
@@ -770,7 +772,7 @@
     <!-- You can delete the links only if you purchased the pro version. -->
     <!-- Licensing information: https://bootstrapmade.com/license/ -->
     <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/personal-free-resume-bootstrap-template/ -->
-    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    Designed by <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>
   </div>
 
   <!-- Vendor JS Files -->
