actualiza acerca de

--- a/index.html
+++ b/index.html
@@ -87,8 +87,10 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Soy un desarrollador fullstack Java</h3>
           <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
+            25 años de experiencia en labores administrativas, gestionando documental y operativamente las necesidades de los distintos actores de la cadena logística del Puerto de Valparaíso. Lo anterior requería permanentemente de trabajo en equipos ya sea dirigiendo o formando parte de éstos.
+          </p>
+          <p>
+            De formación en programación computacional, con el fin de desarrollar mi carrera y actualizar mis conocimientos participé en el programa de capacitación “Mil Programadores” el cual aprobé además de obtener la certificación SFIA. En este curso descubrí JAVA y recordar las sentencias SQL.
           </p>
           <!-- <div class="row">
             <div class="col-lg-6">
@@ -109,8 +111,7 @@
             </div>
           </div> -->
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            Actualmente estoy finalizando el curso FullStack Java impartido por Awakelab. Un bootcamp que me permitió profundizar los conociemientos en Java y descubrir Spring con algunos de sus componentes, como JPA, Spring Boot y Spring Secutity 
           </p>
         </div>
       </div>
