--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             </div>
           </div> -->
           <p>
-            Actualmente estoy finalizando el curso FullStack Java impartido por Awakelab. Un bootcamp que me permitió profundizar los conociemientos en Java y descubrir Spring con algunos de sus componentes, como JPA, Spring Boot y Spring Secutity 
+            Actualmente estoy finalizando el curso FullStack Java impartido por Awakelab. Un bootcamp que me permitió profundizar los conocimientos en Java y descubrir Spring con algunos de sus componentes, como JPA, Spring Boot y Spring Security 
           </p>
         </div>
       </div>
