--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <ul>
           <li><a class="nav-link active" href="#header">Inicio</a></li>
           <li><a class="nav-link" href="#about">Sobre mí</a></li>
-          <li><a class="nav-link" href="#resume">Curriculum</a></li>
+          <!--li><a class="nav-link" href="#resume">Curriculum</a></li-->
           <li><a class="nav-link" href="#services">Portafolio</a></li>
           <!-- <li><a class="nav-link" href="#portfolio">Portafolio</a></li> -->
           <li><a class="nav-link" href="#contact">Contacto</a></li>
@@ -489,49 +489,34 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="bx bxl-dribbble"></i></div>
-            <h4><a href="">Lorem Ipsum</a></h4>
-            <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-          <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="">Sed ut perspiciatis</a></h4>
-            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+            <h4><a href="https://github.com/stzupa/sprintM6" target="_blank">Spring</a></h4>
+            <p>Proyecto basado en Spring framework, JPA, Spring Boot, Security</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-tachometer"></i></div>
-            <h4><a href="">Magni Dolores</a></h4>
-            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+            <div class="icon"><i class="bx bx-file"></i></div>
+            <h4><a href="https://github.com/stzupa/modulo5sprint" target="_blank">J2EE</a></h4>
+            <p>Proyecto implementa tecnología servlet, Jdbc</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-file"></i></div>
+            <h4><a href="https://github.com/stzupa/SprintModulo4" target="_blank">Java</a></h4>
+            <p>Proyecto en Java ejecución por consola</p>
           </div>
         </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="bx bx-world"></i></div>
-            <h4><a href="">Nemo Enim</a></h4>
-            <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-slideshow"></i></div>
-            <h4><a href="">Dele cardo</a></h4>
-            <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-arch"></i></div>
-            <h4><a href="">Divera don</a></h4>
-            <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+            <div class="icon"><i class="bx bx-file"></i></div>
+            <h4><a href="https://github.com/stzupa/Calculadora.frontend" target="_blank">Front end</a></h4>
+            <p>Implementar páginas web básicas responsivas utilizando
+              HTML, CSS y JavaScript</p>
           </div>
         </div>
 
@@ -717,11 +702,11 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+              <!--a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
               <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="#" class="google-plus"><i class="bi bi-skype"></i></a-->
+              <a href="https://www.linkedin.com/in/sergio-teran-206a17a6" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
         </div>
@@ -736,7 +721,7 @@
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bi-whatsapp"></i>
-            <h3>Llámame</h3>
+            <h3>Mi whatsapp</h3>
             <p>+56 9 8165 2327</p>
           </div>
         </div>
