--- a/index.html
+++ b/index.html
@@ -520,6 +520,14 @@
           </div>
         </div>
 
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-file"></i></div>
+            <h4><a href="https://github.com/stzupa/ProcesadorDeTexto" target="_blank">Procesador de texto</a></h4>
+            <p>Utilizando Swing de Java</p>
+          </div>
+        </div>
+
       </div>
 
     </div>
