--- a/index.html
+++ b/index.html
@@ -506,6 +506,22 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
+            <h4><a href="https://github.com/stzupa/Aplicacion-Chat" target="_blank">Aplicación de Chat</a></h4>
+            <p>Utilizando Swing y Sockets de Java. Chat en red local</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-file"></i></div>
+            <h4><a href="https://github.com/stzupa/ProcesadorDeTexto" target="_blank">Procesador de texto</a></h4>
+            <p>Utilizando Swing de Java</p>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-file"></i></div>
             <h4><a href="https://github.com/stzupa/SprintModulo4" target="_blank">Java</a></h4>
             <p>Proyecto en Java ejecución por consola</p>
           </div>
@@ -518,15 +534,7 @@
             <p>Implementar páginas web básicas responsivas utilizando
               HTML, CSS y JavaScript</p>
           </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
-          <div class="icon-box">
-            <div class="icon"><i class="bx bx-file"></i></div>
-            <h4><a href="https://github.com/stzupa/ProcesadorDeTexto" target="_blank">Procesador de texto</a></h4>
-            <p>Utilizando Swing de Java</p>
-          </div>
-        </div>
+        </div>  
 
       </div>
 
