--- a/index.html
+++ b/index.html
@@ -86,12 +86,19 @@
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>Soy un desarrollador fullstack Java</h3>
-          <p class="fst-italic">
+          <!--p class="fst-italic">
             25 años de experiencia en labores administrativas, gestionando documental y operativamente las necesidades de los distintos actores de la cadena logística del Puerto de Valparaíso. Lo anterior requería permanentemente de trabajo en equipos ya sea dirigiendo o formando parte de éstos.
+          </p-->
+          <p>
+            Buscando nuevos desafíos opté por la reconversión laboral y profundizar en lo que desde siempre me ha atraído, la programación.
           </p>
           <p>
-            De formación en programación computacional, con el fin de desarrollar mi carrera y actualizar mis conocimientos participé en el programa de capacitación “Mil Programadores” el cual aprobé además de obtener la certificación SFIA. En este curso descubrí JAVA y recordar las sentencias SQL.
+            Acabo de finalizar un curso de Talento Digital, FullStack Java impartido por Awakelab, un bootcamp que me permitió profundizar los conocimientos en Java y descubrir Spring con algunos de sus componentes, como JPA, Spring Boot y Spring Security 
           </p>
+          <p>
+            También participé en el programa de capacitación “Mil Programadores” el cual aprobé además de obtener la certificación SFIA.
+          </p>
+          <p>Pienso continuar capacitándome.</p>
           <!-- <div class="row">
             <div class="col-lg-6">
               <ul>
@@ -110,9 +117,6 @@
               </ul>
             </div>
           </div> -->
-          <p>
-            Actualmente estoy finalizando el curso FullStack Java impartido por Awakelab. Un bootcamp que me permitió profundizar los conocimientos en Java y descubrir Spring con algunos de sus componentes, como JPA, Spring Boot y Spring Security 
-          </p>
         </div>
       </div>
 
@@ -310,6 +314,14 @@
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box justify-content-center">
             <img src="assets/img/ico/jsp.png">
+            <!-- <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
+            <h3>Flavor Nivelanda</h3> -->
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-3 col-md-4 mt-4">
+          <div class="icon-box justify-content-center">
+            <img src="assets/img/ico/icoGitHub.png">
             <!-- <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
             <h3>Flavor Nivelanda</h3> -->
           </div>
